# bootie

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  bootie.sh  index.html  mingw.cmake  run.sh  srd  xmake.lua
.github/workflows/: publish-demo.yml  release-binaries.yml
_deprecated-bootie-cpp/: xmake.lua
_deprecated-bootie-cpp/src/: bootie.cpp
bootie-ext/: .gitignore  Makefile  README.md
bootie-ext/include/: assert.h  bootie-anim.h  bootie-debug.h  bootie-ds.h  bootie-font.h  bootie-gfx.h  bootie-gui.h  bootie-icons.h  bootie-img.h  bootie-ini.h  bootie-io.h  bootie-sprite.h  bootie-utils.h  bootie.h  bootprog.h  gfx.h  stdint.h  stdlib.h  string.h
bootie-ext/ld/: linker_bios.ld  linker_uefi.ld
bootie-ext/scripts/: icons_to_c.py  png_to_icon.py  ttf_to_c.py
bootie-ext/src/: benchmark.c  breakout.c  eachtitle.c  echo2.c  file-browser.c  file_browser.c  linker_bios.ld  main.c  menu.c  menu2.c  nyan.c  screen_test.c  (+8 more)
bootie-go/: .gitignore  bin.go  cmd_install.go  copy.go  create_img.go  diskmanager.go  diskmanager_linux.go  diskmanager_mac.go  diskmanager_windows.go  exfat.go  exfat_fs.go  exfat_test.go  file_extractor.go  filesystem.go  go.mod  go.sum  gptdisk-64-sectors.raw  init.go  install.go  list.go  logging.go  main.go  mount_img.go  qemu.go  rawio.go  rawio_unix.go  scandisk_linux.go  scandisk_mac.go  scandisk_windows.go  utils.go
data-part/: menu.lst
docs/: G4D_builtin_funcs.md  G4D_unified_api.md  Makefile
runner/: .gitignore  Makefile
src/: bootie.cpp  nativeio.cpp  nativeio.hpp  srd.cpp
tools/: bootlace.com  bootlace64.com
(+60 files in other folders)
